@@ -964,11 +964,14 @@ void Util_printService(Service_T s) {
                 if (o->dependant != NULL)
                         printf(" %-20s = %s\n", "Depends on Service", o->dependant);
 
-        if (s->type == TYPE_PROCESS) {
+        for (Pid_T o = s->pidlist; o; o = o->next) {
                 StringBuffer_clear(buf);
-                printf(" %-20s = %s\n", "Pid", StringBuffer_toString(Util_printRule(buf, s->action_PID, "if changed")));
+                printf(" %-20s = %s\n", "Pid", StringBuffer_toString(Util_printRule(buf, o->action, "if changed")));
+        }
+
+        for (PPid_T o = s->ppidlist; o; o = o->next) {
                 StringBuffer_clear(buf);
-                printf(" %-20s = %s\n", "PPid", StringBuffer_toString(Util_printRule(buf, s->action_PPID, "if changed")));
+                printf(" %-20s = %s\n", "PPid", StringBuffer_toString(Util_printRule(buf, o->action, "if changed")));
         }
 
         if (s->type == TYPE_FILESYSTEM) {
